--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <p>MySQL, MSSQL, MS Access, MongoDB</p> 
 
                     <b>Framework & CMS</b> 
-                    <p>Opencart, Cartthrob (Expression Engine), Drupal, Laravel, Wordpress</p>  
+                    <p>Opencart, Cartthrob (Expression Engine), Drupal, Laravel, Symfony, Wordpress</p>  
 
                     <b>Web Server & OS Setup</b> 
                     <p>Apache, Nginx, Ubuntu, RASPBIAN (Raspberry PI) </p>
@@ -86,7 +86,7 @@
                     <p>Facebook API, Google Map, Chart API, Firebase, Paypal, Molpay API, SCORM TinCan API</p>
 
                     <h4>Projects</h4>
-                    <p>HRMS, Accounting software, Event registration and payment portal, Time Attendance & ESD Access Control, Hybrid Mobile Apps built with Cordova, Drupal module & theme customisation, E-commerce website ... </p>
+                    <p>HRMS, Accounting software, Event registration and payment portal, Time Attendance & ESD Access Control, Hybrid Mobile Apps built with Cordova, Drupal module & theme customisation, Web Scraping tools, E-commerce website ... </p>
                 </div>
             </div> 
         </div> 
