fixed: bootstrap4 pull-right issue

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 
                         <p class="contact">
                             <a href="mailto:chaiwei.boey@gmail.com" class="teal darken-4 btn waves-effect waves-light">Contact</a>
-                            <a class="pull-right" href="https://github.com/chaiwei">Github</a>
+                            <a class="float-right" href="https://github.com/chaiwei">Github</a>
                         </p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 pull-right working-experience">
+            <div class="col-md-6 float-md-right working-experience">
                 <div class="panel-body">
                     <h4>Experience</h4>
                     <p>I have been working as a web developer since 2008. For the past {{ workingexperience }} I have worked with few global companies, non-profit organisations and local business to improve and maintain their company website, e-commerce and business software. </p>
