cw: change desc

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="col-md-6 float-md-right working-experience">
                 <div class="panel-body">
                     <h4>Experience</h4>
-                    <p>I have been working as a web developer since 2008. For the past {{ workingexperience }} I have worked with few global companies, non-profit organisations and local business to improve and maintain their company website, e-commerce and business software. </p>
+                    <p>I have been working as a web developer since 2008. For the past {{ workingexperience }} I have worked with few multinational companies, non-profit organisations and local business to improve and maintain their company website, e-commerce and business software. </p>
 
                     <h4>Skills</h4>
                     <b>Programming Language</b> 
